welcome.lessons.welcome.array.golomb.Golomb.scala.error
golomb:75: error: Unmatched closing brace '}' ignored here
 }
 ^